[gd_scene load_steps=10 format=3 uid="uid://nkchromsigtb"]

[ext_resource type="AudioStream" uid="uid://u1h2atrwy5h4" path="res://audio/music/terminated_loop.mp3" id="2"]
[ext_resource type="PackedScene" uid="uid://bhsrj2uu8y4ay" path="res://scenes/Player.tscn" id="3"]
[ext_resource type="Script" path="res://scripts/Main.gd" id="4"]
[ext_resource type="Script" path="res://scripts/ShakeCamera2D.gd" id="4_fqm3k"]
[ext_resource type="PackedScene" uid="uid://dlmspohhn3xfo" path="res://scenes/main_menu.tscn" id="6_6f4i6"]
[ext_resource type="Theme" uid="uid://bxdnwo7vo2bnr" path="res://ui/themes/theme_hud.tres" id="7"]
[ext_resource type="Texture2D" uid="uid://cob2nvys2ljix" path="res://sprites/tileset.png" id="12"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tpcbk"]
texture = ExtResource("12")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0
0:0/0/z_index = -2
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:0/0 = 0
9:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:0/0/physics_layer_0/angular_velocity = 0.0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:0/0 = 0
10:0/0/z_index = -1
10:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="1"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 31
physics_layer_0/collision_mask = 31
sources/0 = SubResource("TileSetAtlasSource_tpcbk")

[node name="Main" type="Node2D"]
script = ExtResource("4")

[node name="TileMap" type="TileMap" parent="."]
z_index = 1
tile_set = SubResource("1")
format = 2

[node name="FloorTileMap" type="TileMap" parent="."]
z_index = -4
tile_set = SubResource("1")
format = 2

[node name="Player" parent="." instance=ExtResource("3")]

[node name="ShakeCamera2D" type="Camera2D" parent="Player"]
zoom = Vector2(2, 2)
script = ExtResource("4_fqm3k")

[node name="HUDLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="HUDLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(2, 2)

[node name="TimerLabel" type="Label" parent="HUDLayer/Control"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = 280.0
offset_top = 16.0
offset_right = 252.0
offset_bottom = 32.0
theme = ExtResource("7")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "00:00.00"

[node name="KillsLabel" type="Label" parent="HUDLayer/Control"]
visible = false
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = 292.0
offset_top = 16.0
offset_right = 424.0
offset_bottom = 32.0
theme = ExtResource("7")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "KILLS: 0"

[node name="FPSLabel" type="Label" parent="HUDLayer/Control"]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 280.0
offset_top = 288.0
offset_right = 272.0
offset_bottom = 304.0
theme = ExtResource("7")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "FPS: 60"

[node name="MenuLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" parent="MenuLayer" instance=ExtResource("6_6f4i6")]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2")
autoplay = true
bus = &"Music"

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="screen_shake_toggled" from="MenuLayer/MainMenu" to="Player/ShakeCamera2D" method="_on_main_menu_screen_shake_toggled"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_Timer_timeout"]
